--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -79,7 +79,7 @@ jobs:
           GOOGLE_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS }}
         run: | 
           echo '${{ secrets.GCP_CREDENTIALS }}' > key.json
-          cat key.json | docker login -u _json_key --password-stdin https://us-central1-docker.pkg.dev/          
+          cat key.json | docker login -u _json_key --password-stdin https://us-east1-docker.pkg.dev/          
 
       - name: Build and Push Container
         run: |-
