Ajustes na pipeline

--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -83,8 +83,8 @@ jobs:
 
       - name: Build and Push Container
         run: |-
-          docker build -t "${{ secrets.GAR_LOCATION }}-docker.pkg.dev/${{ secrets.PROJECT_ID }}/${{ secrets.SERVICE }}:${{ github.sha }}" ./
-          docker push "${{ secrets.GAR_LOCATION }}-docker.pkg.dev/${{ secrets.PROJECT_ID }}/${{ secrets.SERVICE }}:${{ github.sha }}"
+          docker build -t "${{ secrets.GAR_LOCATION }}/backend:latest
+          docker push "${{ secrets.GAR_LOCATION }}/backend:latest
 
       - name: Deploy to Cloud Run
         id: deploy
@@ -93,7 +93,7 @@ jobs:
           service: ${{ secrets.SERVICE }}
           region: ${{ secrets.REGION }}
           # NOTE: If using a pre-built image, update the image name here
-          image: ${{ secrets.GAR_LOCATION }}-docker.pkg.dev/${{ secrets.PROJECT_ID }}/${{ secrets.SERVICE }}:${{ github.sha }}
+          image: ${{ secrets.GAR_LOCATION }}
 
       # If required, use the Cloud Run url output in later steps
       - name: Show Output
