--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -82,9 +82,9 @@ jobs:
           cat key.json | docker login -u _json_key --password-stdin https://us-east1-docker.pkg.dev/          
 
       - name: Build and Push Container
-        run: |-
-          docker build -t "${{ secrets.GAR_LOCATION }}/backend:latest
-          docker push "${{ secrets.GAR_LOCATION }}/backend:latest
+        run: |
+          docker build -t ${{ secrets.GAR_LOCATION }}/backend:latest .
+          docker push ${{ secrets.GAR_LOCATION }}/backend:latest
 
       - name: Deploy to Cloud Run
         id: deploy
