--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -93,7 +93,7 @@ jobs:
           service: ${{ secrets.SERVICE }}
           region: ${{ secrets.REGION }}
           # NOTE: If using a pre-built image, update the image name here
-          image: ${{ secrets.GAR_LOCATION }}
+          image: ${{ secrets.GAR_LOCATION }}/backend:latest
 
       # If required, use the Cloud Run url output in later steps
       - name: Show Output
