--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -94,6 +94,12 @@ jobs:
           region: ${{ secrets.REGION }}
           # NOTE: If using a pre-built image, update the image name here
           image: ${{ secrets.GAR_LOCATION }}/backend:latest
+          secrets: |
+            CLOUD_SQL_USERNAME=${{ secrets.CLOUD_SQL_USERNAME }}
+            CLOUD_SQL_PASSWORD=${{ secrets.CLOUD_SQL_PASSWORD }}
+            CLOUD_SQL_DATABASE_NAME=${{ secrets.CLOUD_SQL_DATABASE_NAME }}
+            DB_LOCAL_HOST=${{ secrets.DB_LOCAL_HOST }}
+            CLOUD_SQL_CONNECTION_NAME=${{ secrets.DB_LOCAL_HOST }}
 
       # If required, use the Cloud Run url output in later steps
       - name: Show Output
