Ajuste de variaveis de ambiente

--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -49,12 +49,6 @@ on:
     branches:
       - main
 
-env:
-  PROJECT_ID: hackathon-6aso-grupo04 # TODO: update Google Cloud project id
-  GAR_LOCATION: ${{ secrets.GAR_LOCATION }} # TODO: update Artifact Registry location
-  SERVICE: ${{ secrets.SERVICE }} # TODO: update Cloud Run service name
-  REGION: ${{ secrets.REGION }} # TODO: update Cloud Run service region
-
 jobs:
   deploy:
     # Add 'id-token' with the intended permissions for workload identity federation
@@ -94,12 +88,7 @@ jobs:
           region: ${{ secrets.REGION }}
           # NOTE: If using a pre-built image, update the image name here
           image: ${{ secrets.GAR_LOCATION }}/backend:latest
-          secrets: |
-            CLOUD_SQL_USERNAME=${{ secrets.CLOUD_SQL_USERNAME }}
-            CLOUD_SQL_PASSWORD=${{ secrets.CLOUD_SQL_PASSWORD }}
-            CLOUD_SQL_DATABASE_NAME=${{ secrets.CLOUD_SQL_DATABASE_NAME }}
-            DB_LOCAL_HOST=${{ secrets.DB_LOCAL_HOST }}
-            CLOUD_SQL_CONNECTION_NAME=${{ secrets.DB_LOCAL_HOST }}
+          var_env: CLOUD_SQL_USERNAME=${{ secrets.CLOUD_SQL_USERNAME }},CLOUD_SQL_PASSWORD=${{ secrets.CLOUD_SQL_PASSWORD }},CLOUD_SQL_DATABASE_NAME=${{ secrets.CLOUD_SQL_DATABASE_NAME }},DB_LOCAL_HOST=${{ secrets.DB_LOCAL_HOST }},CLOUD_SQL_CONNECTION_NAME=${{ secrets.DB_LOCAL_HOST }}
 
       # If required, use the Cloud Run url output in later steps
       - name: Show Output
